IngressAPI.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: elliott-gateway
spec:
  gatewayClassName: elliott-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: local-route
spec:
  parentRefs:
  - name: elliott-gateway
  hostnames:
  - "elliottsupersayian.com"
  rules:
  - backendRefs:
    - name: saas
      port: 80
